--- a/appco_zymphonies_theme/css/style.css
+++ b/appco_zymphonies_theme/css/style.css
@@ -281,12 +281,22 @@ aside header {
   float:left;
   margin:10px;
   padding:15px;
-  width:31.4%;
+  width:31.2%;
+}
+.region-content .article2 {
+  background:#FFF;
+  border:1px solid #eee;
+  float:left;
+  margin:10px;
+  padding:15px;
+  width:31%;
 }
 header.siteheader {
   font-size:26px;
-  padding:100px 0;
+  padding:30px 0;
   text-align:center;
+    height: 260px;
+  background: url("../images/logo_bg.gif") top left repeat-x;
 }
 h1#site-title {
   font-size:38px;
@@ -360,7 +370,7 @@ body.sidebar-second #sidebar-second {
 }
 .page-wrap {
   margin:0 auto;
-  max-width:1024px;
+  max-width:1300px;
 }
 #content {
   padding:0 5px;
@@ -736,7 +746,7 @@ ol.search-results {
 #copyright > div {
   color:#838383;
   float:left;
-  text-align:center;
+  text-align:right;
 }
 #copyright .credits {
   float:right;
@@ -920,10 +930,43 @@ div.warning {
 .front article {
   text-align:center;
 }
+.front .article2 {
+  text-align:center;
+}
 .front article footer {
   background:#eee;
   font-size:13px;
   padding:9px;
+}
+.front .article2 footer {
+  background:#eee;
+  font-size:13px;
+  padding:9px;
+}
+li.node-readmore {
+	width: 100%;
+  background:#eee;
+  font-size:13px;
+  padding:9px;	
+}
+.not-front .node-flora .field-name-field-image img {
+	float: left;
+	margin-right: 15px;
+}
+.not-front .node-flora .field-name-field-price {
+	font-size: 35px;
+	
+}
+textarea.form-norm {
+	width: 100%;
+	padding: 7px;
+}
+select.form-norm {
+	width: 50%;
+	padding: 7px;
+}
+.not-front .node-flora .field-name-field-price label{
+	color: red;
 }
 .comment {
   background:#FDFDFD;
@@ -1058,6 +1101,8 @@ div.warning {
   font-size:12px;
   margin:0;
   padding:10px 0;
+  height: 260px;
+  background: url("../images/logo_bg.gif") top left repeat-x;
 }
 .not-front h1#site-title a {
   font-size:22px;
