--- a/appco_zymphonies_theme/css/style.css
+++ b/appco_zymphonies_theme/css/style.css
@@ -293,10 +293,19 @@ aside header {
 }
 header.siteheader {
   font-size:26px;
-  padding:30px 0;
-  text-align:center;
+  padding:30px 15px;
     height: 260px;
   background: url("../images/logo_bg.gif") top left repeat-x;
+}
+#logo {
+	float: left!important;
+}
+header.siteheader .right {
+	text-align: right;
+	font-size: 22px!important;
+	color: #fff;
+	line-height: 130%;
+	font-weight: bold;
 }
 h1#site-title {
   font-size:38px;
